# wallflow

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.json  .rustfmt.toml  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  TRADEMARK.md  config.example.yml  install.sh  wallflow.spec
.copr/: Makefile
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: wallflow.yml
debian/: postinst  prerm
docs/: CONFIGURATION.md  TODO-downloaders.md  cross-platform-wallpaper-prd.md  explore.md  history.md  learning-path.md  pre-commit-guide.md  refactoring-plan.md  tui-kitty-graphics-prd.md  wallpaper-downloaders-prd.md
examples/configs/: minimal.yml  power-user.yml
examples/workflows/: content-creator.md
scripts/: build-packages.sh  create-custom-repo.sh  generate-systemd-services.sh  github-release-setup.sh  setup-copr.sh  setup-pre-commit.sh
src/: config.rs  daemon.rs  daemon_status.rs  display.rs  lib.rs  logging.rs  main.rs  updater.rs  wallpaper.rs  wallpaper_legacy.rs
src/colors/: extractor.rs  mod.rs  scheme.rs
src/config/: mod.rs  tests.rs
src/downloaders/: apod.rs  bing.rs  client.rs  earthview.rs  filesystem.rs  mod.rs  picsum.rs  reddit.rs  registry.rs  traits.rs  unsplash.rs  wallhaven.rs
src/integration/: kde.rs  macos.rs  mod.rs  wal.rs
src/platform/: mod.rs
src/swift/: wallflow_helper.swift
src/templates/: download.rs  engine.rs  manifest.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/wallpaper/: mod.rs
src/wallpaper/backends/: awww.rs  gnome.rs  linux.rs  macos.rs  mod.rs  registry.rs  traits.rs  windows.rs
systemd/: awww-daemon.service.template  wallflow.desktop  wallflow.service  wallflow.service.template  wallflow.timer.template
