[package]
name = "wallflow"
version = "0.1.0"
edition = "2024"
authors = ["MK <mksg@mk.sg>"]
description = "Elegant wallpaper management with smooth transitions, powered by awww"
license = "MIT"
repository = "https://github.com/MKSG-MugunthKumar/wallflow"



[package.metadata.bundle]
identifier = "sg.mk.wallflow"
category = "Graphics & Design"

[[bin]]
name = "wallflow"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System directories (XDG compliance)
dirs = "5.0"

# Async runtime (for future HTTP downloads)
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "time"] }

# Async traits for backend system
async-trait = "0.1"

# HTTP client (for wallhaven/picsum)
reqwest = { version = "0.11", features = ["json"] }

# Random selection
rand = "0.8"

# Path manipulation
path-clean = "1.0"
shellexpand = "3.1"

# Command existence checking
which = "4.4"

# Date/time handling for file naming
chrono = "0.4"

# Process daemonization
daemonize = "0.5"

[dev-dependencies]
tempfile = "3.8"

[workspace.lints.clippy]
too_many_arguments = "allow"
missing_errors_doc = "allow"

[workspace.lints.rust]
unused_must_use = "warn"

# Debian package configuration
[package.metadata.deb]
maintainer = "MK <mksg@mk.sg>"
copyright = "2024, MK <mksg@mk.sg>"
license-file = ["LICENSE", "4"]
depends = "$auto, awww"
recommends = "python3-pywal"
section = "graphics"
priority = "optional"
description = """
Elegant wallpaper management with smooth transitions.
wallflow brings fluidity to your desktop with beautiful wallpaper
transitions, dynamic color schemes, and seamless desktop integration.
Supports multiple wallpaper sources including local files, Wallhaven,
and Picsum, with automatic color scheme generation via pywal.
"""
assets = [
  ["target/release/wallflow", "usr/bin/", "755"],
  ["config.example.yml", "usr/share/doc/wallflow/", "644"],
  ["README.md", "usr/share/doc/wallflow/", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }

# RPM package configuration
[package.metadata.rpm]
package = "wallflow"
version = "0.1.0"
summary = "Elegant wallpaper management with smooth transitions"
description = """
wallflow brings fluidity to your desktop with beautiful wallpaper
transitions, dynamic color schemes, and seamless desktop integration.
Supports multiple wallpaper sources including local files, Wallhaven,
and Picsum, with automatic color scheme generation via pywal.
"""
license = "MIT"
group = "Applications/Graphics"
requires = { awww = "*" }
suggests = { python3-pywal = "*" }

# cargo-generate-rpm assets
[[package.metadata.rpm.files]]
source = "target/release/wallflow"
dest = "/usr/bin/wallflow"
mode = "755"

[[package.metadata.rpm.files]]
source = "config.example.yml"
dest = "/usr/share/doc/wallflow/config.example.yml"
mode = "644"

[[package.metadata.rpm.files]]
source = "README.md"
dest = "/usr/share/doc/wallflow/README.md"
mode = "644"
