[package]
authors = [
  "Mugunth (MK) Kumar <mk@mk.sg>",
]
categories = [
  "command-line-utilities",
  "multimedia::images",
]
description = "Elegant wallpaper management with smooth transitions, powered by awww"
edition = "2024"
keywords = [
  "desktop",
  "linux",
  "ricing",
  "wallpaper",
  "wayland",
]
license = "MIT"
name = "wallflow"
readme = "README.md"
repository = "https://github.com/MKSG-MugunthKumar/wallflow"
version = "0.5.0"


[package.metadata.bundle]
category = "Graphics & Design"
identifier = "sg.mk.wallflow"

# cargo-binstall support - allows `cargo binstall wallflow`
[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/wallflow-{ target }{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/wallflow-x86_64-unknown-linux-gnu"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/wallflow-aarch64-unknown-linux-gnu"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/wallflow-x86_64-apple-darwin"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/wallflow-aarch64-apple-darwin"

[lib]
name = "wallflow"
path = "src/lib.rs"

[[bin]]
name = "wallflow"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = [
  "derive",
] }

# Configuration and serialization
serde = { version = "1.0", features = [
  "derive",
] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
] }

# System directories (XDG compliance)
dirs = "5.0"

# Async runtime (for future HTTP downloads)
tokio = { version = "1.0", features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }

# Async traits for backend system
async-trait = "0.1"

# HTTP client (for wallhaven/picsum)
# Using rustls-tls to avoid OpenSSL dependency for cross-compilation
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }

# Template download (tar.gz extraction)
flate2 = "1.0"
tar = "0.4"

# Random selection
rand = "0.8"

# Path manipulation
path-clean = "1.0"
shellexpand = "3.1"

# Command existence checking
which = "4.4"

# Regex for parsing (used in macOS resolution detection)
regex = "1.10"

# Date/time handling for file naming
chrono = { version = "0.4", features = [
  "serde",
] }

# Image processing and metadata
image = "0.25"
imagesize = "0.12"
ratatui-image = "3"

# Process daemonization
daemonize = "0.5"

# Terminal User Interface
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.8"

[workspace.lints.clippy]
missing_errors_doc = "allow"
too_many_arguments = "allow"

[workspace.lints.rust]
unused_must_use = "warn"

# Debian package configuration
[package.metadata.deb]
assets = [
  [
    "644",
    "README.md",
    "usr/share/doc/wallflow/",
  ],
  [
    "644",
    "config.example.yml",
    "usr/share/doc/wallflow/",
  ],
  [
    "755",
    "target/release/wallflow",
    "usr/bin/",
  ],
]
copyright = "2024, MK <mksg@mk.sg>"
depends = "$auto, awww"
description = """
Elegant wallpaper management with smooth transitions.
wallflow brings fluidity to your desktop with beautiful wallpaper
transitions, dynamic color schemes, and seamless desktop integration.
Supports multiple wallpaper sources including local files, Wallhaven,
and Picsum, with automatic color scheme generation via pywal.
"""
license-file = [
  "4",
  "LICENSE",
]
maintainer = "MK <mksg@mk.sg>"
maintainer-scripts = "debian/"
priority = "optional"
recommends = "python3-pywal"
section = "graphics"
systemd-units = { enable = false }

# RPM package configuration
[package.metadata.rpm]
description = """
wallflow brings fluidity to your desktop with beautiful wallpaper
transitions, dynamic color schemes, and seamless desktop integration.
Supports multiple wallpaper sources including local files, Wallhaven,
and Picsum, with automatic color scheme generation via pywal.
"""
group = "Applications/Graphics"
license = "MIT"
package = "wallflow"
requires = { awww = "*" }
suggests = { python3-pywal = "*" }
summary = "Elegant wallpaper management with smooth transitions"
version = "0.5.0"

# cargo-generate-rpm assets
[[package.metadata.rpm.files]]
dest = "/usr/bin/wallflow"
mode = "755"
source = "target/release/wallflow"

[[package.metadata.rpm.files]]
dest = "/usr/share/doc/wallflow/config.example.yml"
mode = "644"
source = "config.example.yml"

[[package.metadata.rpm.files]]
dest = "/usr/share/doc/wallflow/README.md"
mode = "644"
source = "README.md"
